--- a/larget.html
+++ b/larget.html
@@ -8,15 +8,17 @@
 <body>
     <script>
         let num1=prompt(" enter 1st number");
-        let num2=propmt("enter 2nd number");
-        let num3=prompt("enetr 3rd numer" );
+        let num2=prompt("enter 2nd number");
+        let num3=prompt("enter 3rd number");
 
         if ( num1>num2&&num2>num3){
             document.write("  largest number is" +num1)
         }
-        else if(num1>num3){
+        else if 
+        (num1>num3){
             document.write("largest number is"+num2)
-        }else{
+        }
+        else{
             document.write("largest number is"+num3)
         }
     </script>
